--- a/module1/Nhap mon LT can ban/TH/demo/demo1.html
+++ b/module1/Nhap mon LT can ban/TH/demo/demo1.html
@@ -6,7 +6,12 @@
 </head>
 <body>
 <script>
-    alert("Xin chào");
+    let hour =prompt('Number');
+    if (hour==18){
+        alert('ok');
+    }else {
+        alert('not ok');
+    }
 </script>
 </body>
 </html>
